--- a/style.css
+++ b/style.css
@@ -1,28 +1,45 @@
+html {
+    background-color: rgb(0, 0, 0);
+
+}
+
 body {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-    max-width: 800px;
-    padding: 50px;
-    background: lightblue;
-}
+    min-height: 0%;
+    margin: 0;
+    background-color:  whitesmoke;
+    margin: 0px 40px;
 
-
-.top, .header, .links {
-    display: flex;
-}
-
-.top {
-    background-color: rgb(29, 202, 202);
-    flex-direction: row;
-    flex-wrap: wrap;
+    
     
 }
 
+
+.top, .top2, .header, .links {
+    display: flex;
+    flex-grow: 1;
+}
+
+.top, .bottom {
+    padding: 0 50px;
+   
+}
+
+
+
+.top {
+    flex-direction: column;
+    display: flex;
+    flex: 1;
+    padding: 5px 70px 15px;
+    background-color: #1F2937;
+    
+}
+    
+
 .header {
     padding-bottom: 20px;
-    background-color: brown;
     flex-grow: 1;
+    font-size: 25px;
 }
 
 .logo {
@@ -31,25 +48,31 @@ body {
 
 .links {
     flex-grow: 1;
-    background-color: rgb(12, 207, 9);
     justify-content: flex-end;
 
 }
  
 .link {
     padding-right: 1em;
+    font-size: 15px;
 }
 
 
-.top2 {
-    display: flex;
-}
+
+
+
+
+
+
+
+
 
 .sub-header {
     display: flex;
-    max-width: 50%;
-    flex-direction: column;
+    flex-grow: 1;
+    flex-direction: row;
     padding-right: 20px;
+    justify-content: space-between;
 
 }
 
@@ -61,6 +84,35 @@ body {
 
 button {
     width: 100px;
+    padding: 3px;
+    border-radius: 8px;
+    border-color: #E5E7EB;
+    border-width: 3px;
+}
+
+.top2 {
+    margin: 30px 0 70px 0;
+}
+
+.logo2 {
+    font-size:40px;
+    font-weight: bolder;
+}
+
+.text {
+    padding: 5px 0px 5px 0px;
+}
+
+.awesome {
+    max-width: 50%;
+}
+
+
+
+
+
+.middle {
+    margin: 60px 0 60px 0;
 }
 
 .header2 {
@@ -72,21 +124,66 @@ button {
 
 .four {
     display:flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content:center;
     margin-bottom: 150px;
+    padding: 0 70px;
     
 }
+
+img {
+    
+    max-width: 300px;
+    flex: 0 1 auto;
+    border: solid;
+    border-width: 3px;
+    border-color: #1F2937;
+    border-radius: 8px;
+    
+  
+}
+
+.image {
+    margin: 0px 15px;
+    border: solid;
+    border-width: 3px;
+    border-color: #1F2937;
+    border-radius: 8px;
+}
+
+
+
+
+
+
 
 .quote {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 70px;
 
+}
+
+
+
+
+
+
+
+
+
+
+.bottom {
+    
 }
 
 .signup {
     display: flex;
-    background-color: brown;
+    border: solid 3px gray;
+    box-sizing: border-box;
+    border-radius: 12px;
+    
     
 }
 
@@ -94,4 +191,72 @@ button {
     display: flex;
     flex-direction: column;
     margin-right: auto;
+   
+    
+}
+
+.call {
+    font-weight: bolder;
+    
+}
+
+
+
+.signup {
+    align-items: center;
+    padding: 20px 40px;
+   
+}
+
+.button2 {
+    width: 100px;
+    max-height: 25px;
+    padding: 3px;
+    border-radius: 8px;
+}
+    
+
+
+
+
+.logo {
+    font-size: 24px;
+    color: #F9FaF8;
+}
+
+.link, .text {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.logo2 {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    
+}
+
+.header2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.quote {
+    background-color: #E5E7EB;
+}
+.lyrics, .author{
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.signup {
+    background-color: #3882F6;
 }
